# lod-gateway

./: .dockerignore  .editorconfig  .env.example  .env.standalonetest  .gitattributes  .gitignore  CHANGELOG.md  DOR_data_access.py  Dockerfile  Dockerfile.db-service  Dockerfile.poc  Dockerfile.sparql-service  Dockerfile.transformer  Dockerfile.transformer-service  Dockerfile.web-service  Dockerfile.webservice  LAModelComponent.py  LAModelObject.py  LAModelPerson.py  LAModelProcess.py  LICENSE.MD  Makefile  NOTES.md  README.md  VERSION.txt  aArtifact_test_from_DOR.py  artifact-testing.py  artifact_test_from_DOR.py  config.example  docker-compose.test.yml  docker-compose.yml  fuseki-config.ttl  requirements.txt  startup.sh  utilities.py
source/web-service/: Dockerfile  pyproject.toml  setup.py  startup.py  startup.sh  uwsgi.ini  wsgi.py
source/web-service/app/: startup.py  startup.sh
source/web-service/flaskapp/: IngestClasses.py  __init__.py  base_graph_utils.py  conneg.py  errors.py  graph_prefix_bindings.py  ldp_id_generation.py  local_thesaurus.py  logging_configuration.py  openapi.py  openapi_models.py  utilities.py
source/web-service/tests/: conftest.py  test_conneg_linkheaders.py  test_content_profiles.py  test_example.py  test_flaskapp.py  test_ldp_api.py  test_plain_conneg.py  test_proxyfix.py  test_quads_to_triples.py  test_rdf_in_no_rdf_store.py  test_representation_handling.py  test_rewrite_ids_post.py  test_routes_activity.py  test_routes_health.py  test_routes_healthcheck.py  test_routes_ingest.py  test_routes_records.py  test_routes_sparql.py  (+6 more)
(+161 files in other folders)
