[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[project]
name = "lod-gateway"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.1.0,<4.0",
    "Flask-Cors>=5.0.0,<6.0",
    "Flask-Migrate>=4.1.0,<5.0",
    "Flask-SQLAlchemy>=3.1.0,<4.0",
    "SQLAlchemy>=2.0.40,<3.0",
    "flask-openapi3[swagger]>=4.3.0,<5.0",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-cov>=3.0.0,<4.0",
    "pytest-flask>=1.3.0,<2.0",
    "pytest-mock>=3.14.0,<4.0",
    "black>=26.0.0,<27.0",
]


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''